# ak12141-Email-Client

./: .gitignore  README.md  component.md  mkdocs.yml  pull_request_template.md  pyproject.toml
.circleci/: config.yml
docs/: architecture.md  index.md  setup.md  usage.md
src/analyzer/: README.md  pyproject.toml
src/analyzer/src/analyzer/: __init__.py  analyzer.py
src/analyzer/tests/: test_analyzer.py
src/identity/: README.md  pyproject.toml
src/identity/src/identity/: __init__.py  identity.py
src/identity/tests/: test_identity.py
src/ingest/: README.md  pyproject.toml
src/ingest/src/ingest/: __init__.py  ingest.py
src/ingest/tests/: test_ingest.py
src/interface/: README.md  pyproject.toml
src/interface/src/interface/: __init__.py
src/message/: README.md  pyproject.toml
src/message/src/message/: __init__.py  message.py
src/message/tests/: test_message.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_identity_to_ingest.py  test_ingest_to_message.py  test_message_to_analyzer.py
