[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ak12141-email-client"
version = "0.1.0"
description = "A modular email client tool for analysis"
authors = [{name = "Student", email = "student@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "types-requests>=2.31.0",
    "email-client-interface",
    "email-client-identity", 
    "email-client-ingest",
    "email-client-message",
    "email-client-analyzer",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.uv.sources]
email-client-interface = { workspace = true }
email-client-identity = { workspace = true }
email-client-ingest = { workspace = true }
email-client-message = { workspace = true }
email-client-analyzer = { workspace = true }

[tool.uv.workspace]
members = [
    "src/interface",
    "src/identity",
    "src/analyzer",
    "src/message",
    "src/ingest"
]

[tool.pytest.ini_options]
testpaths = [
    "src/analyzer/tests",
    "src/identity/tests", 
    "src/ingest/tests",
    "src/message/tests",
    "tests/integration",
    "tests/e2e"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['^src/.*/tests/.*$']