[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-client-ingest"
version = "0.1.0"
description = "Email fetching and parsing for email client"
authors = [{name = "Student", email = "student@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-client-interface",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Add this to prevent conflicts when running from workspace root
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]
